WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184544
Process::setIdentifier() / Process::identifier() do not need a lock
https://bugs.webkit.org/show_bug.cgi?id=184544
Summary
Process::setIdentifier() / Process::identifier() do not need a lock
Chris Dumez
Reported
2018-04-12 10:09:38 PDT
Process::setIdentifier() / Process::identifier() do not need a lock.
Attachments
Patch
(2.13 KB, patch)
2018-04-12 10:13 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-04-12 10:13:48 PDT
Created
attachment 337804
[details]
Patch
WebKit Commit Bot
Comment 2
2018-04-12 10:51:39 PDT
Comment on
attachment 337804
[details]
Patch Clearing flags on attachment: 337804 Committed
r230583
: <
https://trac.webkit.org/changeset/230583
>
WebKit Commit Bot
Comment 3
2018-04-12 10:51:40 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-04-12 10:52:21 PDT
<
rdar://problem/39386354
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug