Process::setIdentifier() / Process::identifier() do not need a lock https://bugs.webkit.org/show_bug.cgi?id=184544

Reviewed by Brady Eidson.

Process::setIdentifier() / Process::identifier() do not need a lock.
Process::setIdentifier() gets called in ChildProcess::initialize(),
before we start any background threads. It is then safe to query
this process identifier later on from background threads without
locks.

* platform/Process.cpp:
(WebCore::Process::setIdentifier):
(WebCore::Process::identifier):


Canonical link: https://commits.webkit.org/200095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230583 268f45cc-cd09-0410-ab3c-d52691b4dbfc